<resources>
    <string name="app_name">PaymentRecord</string>
    <string name="Welcome">Bienvenido</string>
    <string name="register">Registrar cliente</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="empty">Datos vacios</string>
    <string name="gender_male">Masculino</string>
    <string name="gender_feminine">Femenino</string>
    <string name="to_list_of_clients">Lista de Clientes</string>
    <string name="delite_client">Eliminar Cliente</string>
    <string name="confirm_delete">¿Seguro que desea eliminar este cliente?</string>
    <string name="confirm_pay">¿Seguro que desea realizar este pago de $%s ?</string>
    <string name="error_pay">Error al registrar pago</string>
    <string name="total_pay">Total pagado: $%s </string>
    <string name="sin_metas">Sin clientes</string>
    <string name="create_client">Registrar Cliente</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus feugiat justo tempus vehicula viverra. Proin mollis ligula ex, et faucibus ante dapibus vitae. Vestibulum congue dolor sit amet porta cursus.</string>
    <string name="create_client_new">Registra un cliente</string>
    <string name="register_pay">Registrar pago</string>
    <string name="name">Nombre(s)</string>
    <string name="middle_name">Apellido Paterno</string>
    <string name="last_name">Apellido Materno</string>
    <string name="male">Masculino</string>
    <string name="femenine">Femenino</string>
    <string name="birthdate_profile">Fecha de nacimiento: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_payable">Monto a pagar</string>
    <string name="pay_register">Registrar</string>
    <string name="name_user_is_blank">Nombre(s) es vacio.</string>
    <string name="lastname_is_blank">Apellido materno vacio.</string>
    <string name="middlename_is_blank">Apellido paterno vacio.</string>
    <string name="gender_is_null">Genero no seleccionado.</string>
    <string name="birthdate_is_null">Fecha de nacimiento no seleccionada.</string>
    <string name="error_when_registering">Error al registrar cliente</string>
    <string name="error">Error</string>


</resources>