<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color_2" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_background_header"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@null"
                android:src="@color/background_color_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/lateral_margin"
                android:layout_marginStart="@dimen/lateral_margin"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Moises" />

            <TextView
                android:id="@+id/tv_middle_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/lateral_margin"
                android:layout_marginStart="@dimen/lateral_margin"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="Martinez" />

            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/lateral_margin"
                android:layout_marginStart="@dimen/lateral_margin"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Medina" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_profile_picture"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/lateral_margin"
                android:contentDescription="@null"
                android:src="@drawable/ic_user"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circular" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/lateral_margin"
                        android:textColor="@color/background_color_2"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Hombre" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_date_of_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/lateral_margin"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Industrial Designer, 85" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/new_goal_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/lateral_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount_payable"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/pay_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:backgroundTint="@color/background_color_2"
                    android:text="@string/pay_register"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/vertical_margin"
                    android:layout_marginStart="@dimen/lateral_margin"
                    android:background="@color/cardview_dark_background" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="1"
                    tools:listitem="@layout/view_holder_paymet" />


                <Button
                    android:id="@+id/show_pay_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/lateral_margin"
                    android:layout_marginVertical="@dimen/vertical_margin"
                    android:text="@string/register_pay"
                    android:textColor="@color/background_color_2" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/lateral_margin"
                    android:layout_marginVertical="@dimen/vertical_margin"
                    android:backgroundTint="@color/background_color_2"
                    android:text="@string/delite_client" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>